# flask

./: .gitignore  README.md  app.ini  app.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  test.yml
static/Sudoku/: Board.py  Generator.py  Solver.py
static/sudoku_boards/easy/: 1.json  10.json  100.json  1000.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  (+960 more)
static/sudoku_boards/hard/: 1.json  10.json  100.json  1000.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  (+960 more)
static/sudoku_boards/harder/: 1.json  10.json  100.json  1000.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  (+960 more)
static/sudoku_boards/hardest/: 1.json  10.json  (+998 more)
(+1000 files in other folders)
